# ffmpeg-builds

./: .gitignore  CMakeLists.txt  Justfile  build.bat  build.sh  test.sh  try-msvc.sh
.github/workflows/: build.yaml
cmake/: remove_files_glob.cmake  set_rpath.cmake  utils.cmake
libraries/ffmpeg/: CMakeLists.txt
libraries/fontconfig/: CMakeLists.txt
libraries/fribidi/: CMakeLists.txt
libraries/gperf/: CMakeLists.txt
libraries/harfbuzz/: CMakeLists.txt
libraries/libaom/: CMakeLists.txt
libraries/libass/: CMakeLists.txt
libraries/libbrotli/: CMakeLists.txt
libraries/libdav1d/: CMakeLists.txt
libraries/libexpat/: CMakeLists.txt
libraries/libfdk-aac/: CMakeLists.txt
libraries/libfreetype/: CMakeLists.txt
libraries/libmp3lame/: CMakeLists.txt  libmp3lame.pc.in
libraries/libogg/: CMakeLists.txt
libraries/libopus/: CMakeLists.txt
libraries/libpng/: CMakeLists.txt  FindPNG.cmake
libraries/libpng/patches/: windows-pkg-config.diff
libraries/libvorbis/: CMakeLists.txt
libraries/libvpx/: CMakeLists.txt
libraries/libvpx/patches/: windows-path-limit.diff
libraries/libwebp/: CMakeLists.txt
libraries/libx264/: CMakeLists.txt
libraries/libx265/: CMakeLists.txt
libraries/openssl/: CMakeLists.txt
libraries/zlib/: CMakeLists.txt
